Deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatsapp-gateway-service
spec:
  selector:
    app: whatsapp-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
